[workspace]
members = [
    "cardano-chain-sync",
    "cardano-mempool-sync",
    "cardano-submit-api",
    "spectrum-offchain",
    "spectrum-offchain-cardano",
    "spectrum-cardano-agent",
    "spectrum-cardano-lib",
    "cardano-explorer",
    "bloom-offchain",
    "bloom-offchain-cardano",
    "bloom-cardano-agent",
    "bloom-derivation",
    "cardano-offchain-stableswap"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true