[workspace]
resolver = "2"
members = [
    "algebra-core",
    "concurrent-primitives",
    "cardano-chain-sync",
    "cardano-mempool-sync",
    "cardano-submit-api",
    "spectrum-offchain",
    "spectrum-offchain-cardano",
    "spectrum-cardano-lib",
    "cardano-explorer",
    "bloom-offchain",
    "bloom-offchain-cardano",
    "bloom-cardano-agent",
    "snek-cardano-agent",
    "snek-auth",
    "bloom-derivation",
    "cardano-offchain-stableswap",
    "splash-dao-administration",
    "splash-dao-agent",
    "splash-dao-offchain",
    "spectrum-streaming",
    "engine-telemetry",
    "splash-mempool-proxy",
    "graphite",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
