[package]
name = "async-primitives"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
futures = "0.3.25"
atomic-waker = { git = "https://github.com/oskin1/atomic-waker-broadcast.git", branch = "master" }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
spectrum-streaming = { version = "0.1.0", path = "../spectrum-streaming" }