[package]
name = "bloom-offchain"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-offchain = { version = "0.1.0", path = "../spectrum-offchain" }
algebra-core = { version = "0.1.0", path = "../algebra-core" }
isahc = { version = "1.7.2", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
log = "0.4.17"
bignumber = "0.1.1"
log4rs = "1.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
async-trait = "0.1.58"
async-stream = "0.3.5"
type-equalities = "0.3.1"
tailcall = "0.1.6"
parallel-stream = "2.1.3"
serde = { version = "1.0.147", features = ["derive"] }
priority-queue = "1.3.0"
bounded-integer = { version = "0.5.7", features = ["types", "serde1"] }
parking_lot = "0.12.1"
derive_more = "0.99.17"
bincode = "1.3"
serde_json = "1.0.88"
futures-timer = "3.0.2"
async-std = "1.12"
nonempty = "0.8.1"
hex = "0.4.3"
num-rational = "0.4.1"
derivative = "2.2.0"
lazy_static = "1.4.0"
tracing = "0.1.31"
tracing-subscriber = "0.3.17"
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9.25"
either = "1.9.0"
circular-buffer = "0.1.7"
primitive-types = "0.12.2"