[package]
name = "cardano-chain-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-cardano-lib = { version = "0.1.0", path = "../spectrum-cardano-lib" }
async-trait = "0.1.72"
async-stream = "0.3.3"
base16 = "0.2"
pallas-network = { git = "https://github.com/txpipe/pallas.git", tag = "v0.28.0" }
cml-chain = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "i.oskin/fix-bigint-conversion" }
cml-core = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "i.oskin/fix-bigint-conversion" }
cml-crypto = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "i.oskin/fix-bigint-conversion" }
cml-multi-era = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "i.oskin/fix-bigint-conversion" }
futures = "0.3.28"
futures-timer = "3.0.2"
rocksdb = "0.21.*"
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
minicbor = "0.19.1"
bincode = "1.3.3"
hex = "0.4.3"
thiserror = "1.0.47"
ciborium = "0.2.1"
derive_more = "0.99.17"
log = "0.4.20"

[dev-dependencies]
rand = "0.8.5"