[package]
name = "cardano-chain-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-primitives = { version = "0.1.0", path = "../concurrent-primitives" }
spectrum-cardano-lib = { version = "0.1.0", path = "../spectrum-cardano-lib" }
async-trait = "0.1.72"
async-stream = "0.3.3"
base16 = "0.2"
pallas-network = { git = "https://github.com/kettlebell/pallas.git", branch = "conway_diagnostics" }
cml-chain = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-core = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-crypto = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-multi-era = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
futures = "0.3.28"
futures-timer = "3.0.2"
rocksdb = "0.22.*"
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
minicbor = "0.19.1"
bincode = "1.3.3"
hex = "0.4.3"
thiserror = "1.0.47"
ciborium = "0.2.1"
derive_more = { version = "1.0.0", features = ["full"] }
log = "0.4.20"
either = "1.13.0"

[dev-dependencies]
rand = "0.8.5"