[package]
name = "cardano-mempool-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
base16 = "0.2"
pallas-network = { git = "https://github.com/oskin1/pallas.git", branch = "fix-localtxsubmit-decoder" }
cml-chain = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", branch = "develop" }
cml-core = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", branch = "develop" }
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
minicbor = "0.19.1"
bincode = "1.3.3"
hex = "0.4.3"
thiserror = "1.0.47"

[dev-dependencies]
rand = "0.8.5"