[package]
name = "cardano-submit-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
async-stream = "0.3.3"
base16 = "0.2"
pallas-network = { git = "https://github.com/oskin1/pallas.git", branch = "fix-tx-monitor-decoder" }
cml-chain = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "i.oskin/adjust-fee-estimation" }
cml-core = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "i.oskin/adjust-fee-estimation" }
futures = "0.3.28"
futures-timer = "3.0.2"
futures-util = "0.3.28"
rocksdb = "0.21.*"
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
minicbor = "0.19.1"
bincode = "1.3.3"
hex = "0.4.3"
thiserror = "1.0.47"
ciborium = "0.2.1"

[dev-dependencies]
rand = "0.8.5"