[package]
name = "engine-telemetry"
version = "1.0.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.41.1"
async-std = "1.12.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_urlencoded = "0.7.1"
log = "0.4.22"
serde_json = "1.0.121"
clap = { version = "4.5.17", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
hex = "0.4.3"
cml-crypto = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
bloom-offchain-cardano = { version = "1.0.0", path = "../bloom-offchain-cardano" }
bloom-offchain = { version = "1.0.0", path = "../bloom-offchain" }
spectrum-cardano-lib = { version = "0.1.0", path = "../spectrum-cardano-lib" }
spectrum-offchain-cardano = { version = "1.0.0", path = "../spectrum-offchain-cardano" }
log4rs = "1.3.0"
futures = "0.3.30"
pin-project-lite = "0.2.15"
futures-core = "0.3.30"
async-postgres = "0.5.1"