[package]
name = "snek-auth"
version = "1.0.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
tokio = "1.41.1"
cached = "0.54.0"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde_urlencoded = "0.7.1"
log = "0.4.22"
serde_json = "1.0.121"
clap = { version = "4.5.17", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
hex = "0.4.3"
cml-crypto = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
bloom-offchain-cardano = { version = "1.0.0", path = "../bloom-offchain-cardano" }
bloom-offchain = { version = "1.0.0", path = "../bloom-offchain" }
spectrum-cardano-lib = { version = "0.1.0", path = "../spectrum-cardano-lib" }
graphite = { version = "0.1.0", path = "../graphite" }
log4rs = "1.3.0"
chrono = "0.4.38"
strum_macros = "0.24.3"