[package]
name = "spectrum-cardano-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2"
cml-chain = "5.2.0"
cml-core = "5.2.0"
cml-crypto = "5.2.0"
cml-multi-era = "5.2.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
thiserror = "1.0.47"
derive_more = "0.99.17"
derivative = "2.2.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
log = "0.4.17"
num-rational = "0.4.1"
either = "1.9.0"
