[package]
name = "spectrum-cardano-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-offchain = { version = "0.1.0", path = "../spectrum-offchain" }
algebra-core = { version = "0.1.0", path = "../algebra-core" }
base16 = "0.2"
cml-chain = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-core = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-crypto = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-multi-era = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
serde = { version = "1.0.147", features = ["derive"] }
serde_with = "3.9.0"
hex = "0.4.3"
cbor_event = "2.4.0"
thiserror = "1.0.47"
derive_more = { version = "1.0.0", features = ["full"] }
derivative = "2.2.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
log = "0.4.17"
num-rational = "0.4.1"
either = "1.9.0"
primitive-types = "0.12.2"
num = "0.4.1"
type-equalities = "0.3.1"
