[package]
name = "spectrum-offchain"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.7.2", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
log = "0.4.17"
cml-core = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "i.oskin/fix-bigint-conversion" }
tracing = "0.1.37"
log4rs = "1.2.0"
async-trait = "0.1.58"
async-channel = "1.9.0"
type-equalities = "0.3.1"
tailcall = "0.1.6"
parallel-stream = "2.1.3"
chrono = "0.4.28"
serde = { version = "1.0.147", features = ["derive"] }
priority-queue = "1.3.0"
bounded-integer = { version = "0.5.7", features = ["types", "serde1"] }
rand = "0.8.5"
parking_lot = "0.12.1"
derive_more = "0.99.17"
bincode = "1.3"
rocksdb = "0.21.*"
serde_json = "1.0.88"
serde_with = { version = "2.1", features = ["chrono_0_4"] }
futures-timer = "3.0.2"
async-std = "1.12"
nonempty = "0.8.1"
num-rational = { version = "0.4.1", features = ["serde"] }
either = "1.9.0"
hex = "0.4.3"
circular-buffer = "0.1.7"
cml-chain = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "i.oskin/fix-bigint-conversion" }

[dev-dependencies]
rocksdb = "0.21.*"
derive_more = "0.99.17"