[package]
name = "spectrum-streaming"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
futures-util = "0.3.28"
tokio = { version = "1.42.0", features = ["full"] }
async-stream = "0.3.5"
async-std = "1.12"
pin-project-lite = "0.2.14"
futures-core = "0.3.30"
futures-timer = "3.0.3"
log = "0.4.20"
