[package]
name = "splash-dao-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.58"
bloom-offchain-cardano = { version = "1.0.0", path = "../bloom-offchain-cardano" }
bounded-integer = { version = "0.5.7", features = ["types", "serde1"] }
cardano-chain-sync = { version = "0.1.0", path = "../cardano-chain-sync" }
cardano-explorer = { version = "0.1.0", path = "../cardano-explorer" }
chrono = "0.4.28"
cml-chain = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-core = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-crypto = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-multi-era = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cardano-submit-api = { version = "0.1.0", path = "../cardano-submit-api" }
hex = "0.4.3"
minicbor = { version = "0.20", features = ["std", "half", "derive"] }
spectrum-cardano-lib = { version = "0.1.0", path = "../spectrum-cardano-lib" }
spectrum-offchain = { version = "0.1.0", path = "../spectrum-offchain" }
spectrum-offchain-cardano = { version = "1.0.0", path = "../spectrum-offchain-cardano" }
splash-dao-offchain = { version = "1.0.0", path = "../splash-dao-offchain" }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
log = "0.4.17"
log4rs = "1.2.0"
tracing = "0.1.31"
tracing-subscriber = "0.3.17"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.88"
