[package]
name = "splash-dao-offchain"
version = "1.0.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-primitives = { version = "0.1.0", path = "../concurrent-primitives" }
spectrum-offchain = { version = "0.1.0", path = "../spectrum-offchain" }
spectrum-offchain-cardano = { version = "1.0.0", path = "../spectrum-offchain-cardano" }
bloom-offchain-cardano = { version = "1.0.0", path = "../bloom-offchain-cardano" }
bloom-offchain = { version = "1.0.0", path = "../bloom-offchain" }
cardano-chain-sync = { version = "0.1.0", path = "../cardano-chain-sync" }
cardano-explorer = { version = "0.1.0", path = "../cardano-explorer" }
cml-core = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cardano-submit-api = { version = "0.1.0", path = "../cardano-submit-api" }
spectrum-cardano-lib = { version = "0.1.0", path = "../spectrum-cardano-lib" }
cbor_event = "2.4.0"
cml-crypto = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch =    "fix-datum-hash" }
cml-chain = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch =     "fix-datum-hash" }
cml-multi-era = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
pallas-network = { git = "https://github.com/kettlebell/pallas.git", branch = "conway_diagnostics" }
pallas-primitives = { git = "https://github.com/kettlebell/pallas.git", branch = "conway_diagnostics" }
isahc = { version = "1.7.2", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.17"
log4rs = "1.2.0"
num-bigint = "0.4.4"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
async-trait = "0.1.58"
async-stream = "0.3.5"
type-equalities = "0.3.1"
tailcall = "1.0.*"
once_cell = "1.20.2"
parallel-stream = "2.1.3"
primitive-types = "0.12.2"
serde = { version = "1.0.147", features = ["derive"] }
rmp-serde = "1.3.0"
priority-queue = "1.3.0"
bounded-integer = { version = "0.5.7", features = ["types", "serde1"] }
parking_lot = "0.12.1"
derive_more = { version = "1.0.0", features = ["full"] }
bincode = "1.3"
rocksdb = "0.22.*"
serde_json = "1.0.88"
futures-timer = "3.0.2"
async-std = "1.12"
nonempty = "0.10.*"
hex = "0.4.3"
num-rational = "0.4.1"
num-integer = "0.1.45"
derivative = "2.2.0"
lazy_static = "1.4.0"
tracing = "0.1.31"
tracing-subscriber = "0.3.17"
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9.25"
void = "1.0.2"
minicbor = { version = "0.20", features = ["std", "half", "derive"] }
either = "1.10.0"
uplc = "1.1"
uplc-pallas-codec = { package = "pallas-codec", version = "0.31" }
uplc-pallas-traverse = { package = "pallas-traverse", version = "0.31" }
uplc-pallas-primitives = { package = "pallas-primitives", version = "0.31" }

[dev-dependencies]
rocksdb = "0.22.*"
cbor_event = "2.4.0"

[features]
default = []
test_30_min_epoch = []