[package]
name = "splash-lp-index"
version = "1.0.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
async-primitives = { version = "0.1.0", path = "../concurrent-primitives" }
spectrum-streaming = { version = "0.1.0", path = "../spectrum-streaming" }
bloom-offchain = { version = "1.0.0", path = "../bloom-offchain" }
bloom-offchain-cardano = { version = "1.0.0", path = "../bloom-offchain-cardano" }
spectrum-offchain = { version = "0.1.0", path = "../spectrum-offchain" }
spectrum-offchain-cardano = { version = "1.0.0", path = "../spectrum-offchain-cardano" }
cardano-chain-sync = { version = "0.1.0", path = "../cardano-chain-sync" }
cardano-explorer = { version = "0.1.0", path = "../cardano-explorer" }
cardano-mempool-sync = { version = "0.1.0", path = "../cardano-mempool-sync" }
spectrum-cardano-lib = { version = "0.1.0", path = "../spectrum-cardano-lib" }
cml-core = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-crypto = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-chain = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
cml-multi-era = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", branch = "fix-datum-hash" }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
log = "0.4.17"
log4rs = "1.2.0"
async-trait = "0.1.58"
type-equalities = "0.3.1"
serde = { version = "1.0.147", features = ["derive"] }
rmp-serde = "1.3.0"
rocksdb = "0.22.*"
serde_json = "1.0.88"
tracing = "0.1.31"
tracing-subscriber = "0.3.17"
clap = { version = "4.0", features = ["derive"] }
either = "1.9.0"
hex = "0.4.3"
tempfile = "3.10.1"

[dev-dependencies]
rocksdb = "0.22.*"
spectrum-offchain-cardano = { version = "1.0.0", path = "../spectrum-offchain-cardano" }
