[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom-offchain = { version = "1.0.0", path = "../bloom-offchain" }
cardano-chain-sync = { version = "0.1.0", path = "../cardano-chain-sync" }
cbor_event = "2.4.0"
cml-chain = "5.2.0"
cml-crypto = "5.2.0"
cml-multi-era = "5.2.0"
hex = "0.4.3"
log = "0.4.17"
rand = "0.8.5"
spectrum-cardano-lib = { version = "0.1.0", path = "../spectrum-cardano-lib" }
spectrum-offchain = { version = "0.1.0", path = "../spectrum-offchain" }
spectrum-offchain-cardano = { version = "1.0.0", path = "../spectrum-offchain-cardano" }
